--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="CSS/styles.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-  <div>
+  <div class="container">
     <div class="img-product"></div>
-    <div>
+    <div class="product-section">
       <h5>Perfume</h5>
       <h2>Gabrielle Essence Eau De Parfum</h2>
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
@@ -20,6 +19,11 @@
       </p>
       <h3>$149.99</h3><span><s>$169.99</s></span>
     </div>
+    
+  </div> <!--End container-->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Yosef Solomon</a>.
   </div>
   
   
@@ -39,9 +43,9 @@
   $169.99
 
   Add to Cart -->
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Yosef Solomon</a>.
-  </div>
+  </div> -->
 </body>
 </html>
