--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
   <div class="container">
-    <div class="img-product"></div>
+    <img class="img-product" src="../images/image-product-desktop.jpg">
     <div class="product-section">
       <h5>Perfume</h5>
-      <h2>Gabrielle Essence Eau De Parfum</h2>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <!-- <h2>De Parfum</h2> -->
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
          Perfumer-Creator for the House of CHANEL.
       </p>
       <h3>$149.99</h3><span><s>$169.99</s></span>
     </div>
     
-  </div> <!--End container-->
+  </div> <!--End container--> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Yosef Solomon</a>.
