--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div class="container">
     <img class="img-product " src="../images/image-product-desktop.jpg">
     <div class="product-section">
-      <h5>Perfume</h5>
+      <h5>PERFUME</h5>
       <h1>Gabrielle Essence Eau De Parfum</h1>
       <!-- <h2>De Parfum</h2> -->
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      <p class="text-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
          Perfumer-Creator for the House of CHANEL.
       </p>
       <h3>$149.99</h3><span><s>$169.99</s></span>
