--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <p class="text-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
          Perfumer-Creator for the House of CHANEL.
       </p>
-      <h3>$149.99</h3><span><s>$169.99</s></span>
+      <div class="pricing">
+        <h3>$149.99</h3>
+        <span>$169.99</span>
+      </div>
+      <div class="order-product">
+        <button>🛒 Add to Cart</button>
+      </div>
     </div>
     
   </div> <!--End container--> 
