--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-  <div class="container">
+  <main>
+    
     <img class="img-product " src="../images/image-product-desktop.jpg">
-    <div class="product-section">
+    <section>    
       <h5>PERFUME</h5>
       <h1>Gabrielle Essence Eau De Parfum</h1>
       <!-- <h2>De Parfum</h2> -->
-      <p class="text-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-         Perfumer-Creator for the House of CHANEL.
+      <p class="text-description">
+        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.
       </p>
       <div class="pricing">
         <h3>$149.99</h3>
@@ -24,21 +26,15 @@
       </div>
       <div class="order-product">
         <button>🛒 Add to Cart</button>
-      </div>
-    </div>
-    
-  </div> <!--End container--> 
+      </div>    
+    </section>
+  
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Yosef Solomon</a>.
   </div>
   
-  
-
-
-
-
-
   <!-- Preview
 
   Gabrielle Essence Eau De Parfum
