--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
+  <main>
+    <img class="img-product " src="../images/image-product-desktop.jpg">
+    <section>
+      <h5>PERFUME</h5>
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <p class="text-description">
+        A floral, solar and voluptuous <br>
+        interpretation composed by <br>
+        Olivier Polge, Perfumer-Creator <br>
+        for the House of CHANEL.
+      </p>
+      <div class="pricing">
+        <h3>$149.99</h3>
+        <span>$169.99</span>
+      </div>
+      <div class="order-product">
+        <button>🛒 Add to Cart</button>
+      </div> 
+    </section>
+  </main>
   
 
   
