--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
       <div class="pricing">
         <h3>$149.99</h3>
-        <span>$169.99</span>
+        <span><strike>$169.99</strike></span>
       </div>
       <div class="order-product">
         <button>🛒 Add to Cart</button>
