Adding alt text to image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <main>
-    <img class="img-product " src="../images/image-product-desktop.jpg">
+    <img class="img-product " src="../images/image-product-desktop.jpg" 
+         alt="Perfum bottle viewed at an angle laying on its back with leaves on the top left and top right of the bottle">
     <section>
       <h5>PERFUME</h5>
       <h1>Gabrielle Essence Eau De Parfum</h1>
